# data_demos

./: .env  .envrc  .gitignore  README.md  bundle-schema.json  databricks.yaml  prek.toml  pyproject.toml
calgary_transit_process/: .env  bundle-schema.json  pyproject.toml
calgary_transit_process/resources/calgary_transit/: pipeline.yaml  uc_objects.yaml
calgary_transit_process/resources/stable/: uc_objects.yaml
calgary_transit_process/src/data_demos/: __init__.py
calgary_transit_process/src/data_demos/ingest/: calgary_transit.py
calgary_transit_process/src/data_demos/process/: calgary_transit_schemas.py  scratch.py
calgary_transit_zerobus/: README.md
calgary_transit_zerobus/databricks/: .envrc  databricks.yaml  pyproject.toml  pyproject.toml.bak
calgary_transit_zerobus/databricks/resources/calgary_transit/: app.yaml
calgary_transit_zerobus/databricks/src/calgary_transit_zb/: calgary_transit.py
calgary_transit_zerobus/databricks/src/fixme/: calgary_transit_process.py
calgary_transit_zerobus/databricks/src/zerobus_app/: calgary_transit.py  pyproject.toml
calgary_transit_zerobus/databricks/src/zerobus_app/tests/: conftest.py  test_calgary_transit_schemas.py  test_transit_ingest.py
calgary_transit_zerobus/databricks/src/zerobus_sdp/: calgary_transit_ingest_pipeline.py
calgary_transit_zerobus/terraform/: .gitignore  providers.tf  service_principal.tf  uc_objects.tf
resources/: uc_objects.yaml
resources/calgary_transit/: uc_objects.yaml
resources/stable/: uc_objects.yaml
sample_data/calgary_transit/: service_alerts.json  vehicle_positions.json
scripts/: calgary_transit_ingest.py  tag_resources.py  test_local_spark.py
src/data_demos/ingest/: calgary_transit.py
src/data_demos/process/: calgary_transit_ingest.py  calgary_transit_schemas.py
tests/: test_calgary_transit_schemas.py
workflows/: calgary_transit_ingest_pipeline.py
