[project]
name = "calgary-transit-zerobus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "ianepreston", email = "17241371+ianepreston@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
  "databricks-zerobus-ingest-sdk>=1.1.0",
  "gtfs-realtime-bindings>=2.0.0",
]
[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
