[tool.uv.workspace]
members = ["src/*"]

[tool.uv]
package = false

[project]
name = "calgary-transit-zerobus"
version = "0.1.0"
description = "Container workspace for things related to ingesting Calgary Transit data with zerobus"
readme = "README.md"
authors = [
  { name = "ianepreston", email = "17241371+ianepreston@users.noreply.github.com" },
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "databricks-sdk>=0.102.0",
  "ipython>=9.10.0",
  "prek>=0.3.8",
  "pyspark>=4.1.1",
  "pytest>=9.0.2",
  "ruff>=0.15.7",
]

[tool.ruff]
builtins = ["spark"]
