[project]
name = "zerobus_app"
version = "0.1.0"
description = "Run zerobus ingestion from a Databricks app"
readme = "README.md"
authors = [
  { name = "ianepreston", email = "17241371+ianepreston@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = [
  "databricks-zerobus-ingest-sdk>=1.1.0",
  "gtfs-realtime-bindings>=2.0.0",
]

[tool.uv]
package = false
